# outtic

./: color_finder.py  global_hotkey_listener.py  macrro_setup.py  pyproject.toml  requirements.txt  run_app.py  run_auttic.py  run_autwai.py  run_dev.py  test.py
app/: app_controller.py  app_ui.py  autwai_controller.py  autwai_ui.py  color_finder.py  controller.py  global_hotkey_listener.py  macrro_setup.py  run_dev.py  run_dev_autwai.py  sample_app.py  ui.py
